# Luban-Turbo

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/top/zibin/luban/turbo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: turbo.c
app/src/main/cpp/include/: bmp.c  jcstest.c  tjbench.c  turbojpeg.c
app/src/main/cpp/include/java/: TJExample.java  TJUnitTest.java
app/src/main/cpp/include/java/org/libjpegturbo/turbojpeg/: TJ.java  TJCompressor.java  TJCustomFilter.java  TJDecompressor.java  TJLoader.java  TJScalingFactor.java  TJTransform.java  TJTransformer.java
app/src/main/java/top/zibin/luban/turbo/: MainActivity.kt  TurboCompressor.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/top/zibin/luban/turbo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
